# rmesh

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  docs.yml  test.yml  wasm.yml  wheels.yml
crates/cache_access/: Cargo.toml
crates/rmesh/: Cargo.toml
crates/rmesh/schemas/: README.md  collada_schema_1_4_1.xsd.zstandard  collada_schema_1_5.xsd.zstandard  gltf_2_schema.json.zstandard
crates/rmesh/src/: attributes.rs  creation.rs  exchange.rs  geometry.rs  lib.rs  mesh.rs  path.rs  scene.rs  simplify.rs
crates/rmesh/src/exchange/: mod.rs  obj.rs  stl.rs
crates/rmesh_macro/: Cargo.toml
crates/rmesh_macro/src/: lib.rs
crates/rmesh_python/: Cargo.toml  pyproject.toml  typegen.py  typings.py
crates/rmesh_python/src/: lib.rs  mesh.rs
crates/rmesh_python/test/: test_basic.py  test_bench.py
crates/rmesh_wasm/: Cargo.toml  README.md
crates/rmesh_wasm/src/: lib.rs
crates/rmesh_wasm/tests/: web.rs
crates/rmeshpy/: Cargo.toml  pyproject.toml
crates/rmeshpy/src/: mesh.rs
docs/: README.md  book.toml  macro_improvements.md
docs/src/: SUMMARY.md  introduction.md  packages.md
macros/cache_access/src/: lib.rs
macros/typings/: generate.py
python/: Cargo.toml
python/src/: lib.rs  mesh.rs
src/: lib.rs  mesh.rs  simplify.rs
test/python/: test_basic.py
