[package]
name = "rmesh-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rmesh"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
pyo3 = { version = "0.24.0", features=["anyhow"] }

bytemuck = { version = "1.22.0", features = ["derive", "extern_crate_alloc"] }
rmesh = { path = ".." }

[dev-dependencies]
approx = "0.5.1"
