[package]
name = "rmesh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace=true}
bytemuck = {workspace=true}
nalgebra = {workspace=true}
rmesh_macro = { path = "../rmesh_macro" }

ahash = "0.8.11"
itertools = "0.14.0"
rayon = "1.10.0"
earcut = "0.4.4"
approx = "0.5.1"
image = "0.25.6"
