[package]
name = "rmesh_python"
version = "0.1.0"
edition = "2024"

[lib]
name = "rmesh"
crate-type = ["cdylib"]

[dependencies]
anyhow = {workspace=true}
bytemuck = {workspace=true}
nalgebra = {workspace=true}
rmesh = { path = "../rmesh" }
rmesh_macro = { path = "../rmesh_macro" }

numpy = "0.24.0"
pyo3 = { version = "0.24.0", features=["anyhow"] }

[dev-dependencies]
approx = "0.5.1"
nalgebra = { version = "0.33.2", features=["bytemuck"] }
