[build-system]
# make sure we build on the same numpy version range
# as our install numpy version range
requires = ["maturin>=1.8,<2.0",
            "numpy>=2.0"]
build-backend = "maturin"

[project]
name = "rmesh"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy>=2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
